--- a/backend/env.example
+++ b/backend/env.example
@@ -1,6 +1,12 @@
 # Server Configuration
 NODE_ENV=development
 PORT=3000
+HTTPS_ENABLED=false
+# Point to your key/cert files (keep the files outside the repo; backend/certs/ is gitignored)
+SSL_KEY_PATH=./certs/localhost-key.pem
+SSL_CERT_PATH=./certs/localhost-cert.pem
+# Optional passphrase for encrypted keys
+SSL_PASSPHRASE=
 
 # JWT Secret (change this to a strong random string in production)
 SECRET_KEY=your_secret_key_change_this_in_production
@@ -13,4 +19,3 @@ ADOBE_REDIRECT_URI=http://localhost:3000/auth/adobe/callback
 
 # GraphQL URL (for frontend)
 GRAPHQL_URL=http://localhost:3000/graphql
-
